finally our map problem solved after hours of researchs then 24 hours of the post on stack overflow and continuous researchs

--- a/src/Footer.scss
+++ b/src/Footer.scss
@@ -14,7 +14,7 @@
         display: flex;
         justify-content: space-evenly;
         padding: 20px;
-        &:nth-child(1):hover, &:nth-child(2):hover, &:nth-child(4):hover {
+        &:nth-child(1):hover, &:nth-child(2):hover, &:nth-child(4):hover, &:nth-child(5):hover {
             transform: scale(1.2);
             color: wheat;
         }
