--- a/src/Intro.scss
+++ b/src/Intro.scss
@@ -295,7 +295,7 @@ div.projects > ul > li:nth-child(5) > div > ul {
     }
     #ProjectsItem__singleProject {
       color: lightseagreen;
-      transition: 1s ease;
+      transition: .3s ease;
     }
   }
 }
